# Project-AgenticEbookLibrary

./: .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
EbookLibraryUI/: App.xaml  App.xaml.cs  EbookLibraryUI.csproj  EbookLibraryUI.sln  MainWindow.xaml  MainWindow.xaml.cs
EbookLibraryUI/Models/: AppSettings.cs  BatchReextractFieldDtos.cs  EbookDto.cs  EbookUpdateDto.cs  IngestProgressEvent.cs  IngestRequestDto.cs  KnownPublisherDtos.cs  ReextractFieldDtos.cs
EbookLibraryUI/Services/: AppSettingsService.cs  EbookApiService.cs  IAppSettingsService.cs  IEbookApiService.cs  IFolderPickerService.cs  INavigationService.cs  WindowsFolderPickerService.cs
EbookLibraryUI/ViewModels/: EbookDetailViewModel.cs  IngestViewModel.cs  LibraryBookRowViewModel.cs  LibraryViewModel.cs  SettingsViewModel.cs
EbookLibraryUI/Views/: EbookDetailView.xaml  EbookDetailView.xaml.cs  IngestView.xaml  IngestView.xaml.cs  LibraryView.xaml  LibraryView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
EbookLibraryWeb/: index.html  package-lock.json  package.json
EbookLibraryWeb/src/: App.tsx  index.css  main.tsx
api/: dependencies.py  main.py  schemas.py
api/routers/: ebooks.py  ingest.py  publishers.py  system.py
api/services/: __init__.py  batch_reextract_field_service.py  field_reextract_service.py
api/tests/: test_batch_reextract.py  test_ebook_list_filters.py  (+2 more)
domain/: __init__.py  ebook_metadata.py
ingestion/: alembic.ini  main.py
migrations/: env.py
persistence/: __init__.py  mappers.py  publisher_catalog.py  session.py
testing/: main.py  notes.md
(+68 files in other folders)
