[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-agenticebooklibrary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.2",
    "pymupdf>=1.27.2.2",
    "sqlalchemy>=2.0.49",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain", "persistence*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
